--- a/08032017/exo3/CSS/style.css
+++ b/08032017/exo3/CSS/style.css
@@ -51,3 +51,52 @@
         /* Centrer une balise de type block */
         margin: 1rem auto;
     }
+
+    /* Ajouter une marge basse de 20px à toutes les sections */
+    section{
+        margin-bottom: 4rem;
+    }
+
+    /* Mise en forme typographique */
+    .presentation{
+        /* Modifier la fonte de caractére */
+        font-family: "Arial", sans-serif;
+
+        /* Modifier la taille de la fonte */
+        font-size: 1.7rem;
+
+        /* Modifier l'interlignage */
+        line-height: 2em;
+
+        /* Modifier la graisse de police */
+        font-weight: bold;
+
+        /* Ajouter une ombre portée */
+        text-shadow: 0 0 .5rem darkorange;
+
+        /* Modifier la casse */
+        text-transform: uppercase;
+
+        /* Modifier le style de la fonte italique */
+        font-style: italic;
+
+        /* Modifier la décoration de la fonte */
+        text-decoration: underline;
+    }
+
+    /* Utilisation des couleurs */
+
+    #portfolio{
+        background-color: #4e87a7;
+        color: white;
+        text-align: center;
+    }
+
+    #portfolio article{
+        background-color: white;
+        color: black;
+        padding: 2rem;
+        margin: 1rem;
+        /* Afficher les articles sur 3 colonnes */
+        display: inline-block;
+    }
