--- a/10032017/exo3/CSS/style.css
+++ b/10032017/exo3/CSS/style.css
@@ -14,6 +14,7 @@
 
     a{
         text-decoration: none;
+        -webkit-transition: all 0.5s; /* Permet d'animer les transitions sur toutes les balises <a> */
     }
 
     img{
@@ -47,6 +48,7 @@
         padding: 1.5rem;
         background: #233140;
     }
+
 /* ------------------------------------------ */
 /* largeur max */
     nav ul,#portfolio,#about p,#contacts,footer section{
@@ -65,8 +67,18 @@ nav{
     padding: 3rem;
     text-transform: uppercase;
     background: #2c3e50;
-    text-align: left;
+    text-align: right;
     margin-bottom: 6rem;
+    width: 100%; 
+}
+
+nav ul{
+    position: relative;
+}
+
+nav li:first-of-type{
+    position: absolute;
+    left: 0;   
 }
 
 nav a{
@@ -88,13 +100,24 @@ header p{
 }
 
 #portfolio a{
-    display: none;
+    background: rgba(24, 188, 156, .9);
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    font-size: 5rem;
+}
+
+#portfolio a:hover{
+    opacity: 1;
 }
 
 #portfolio article{
     display: inline-block;
     width: 30%;
     margin: 1rem;
+    position: relative;
 }
 
 #about{
