--- a/15032017/exo1/css/style.css
+++ b/15032017/exo1/css/style.css
@@ -1,6 +1,12 @@
 /* Importer une feuille de style (pour l'icone menu burger) */
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
+*{
+    /* A ajouter à l'init CSS (bien pratique) */
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body{
     text-align: center;
 }
@@ -63,6 +69,14 @@ article{
     nav li{
         display: inline-block;
         padding: .5rem;
+    }
+
+    header{
+        width: 950px;
+        margin: auto;
+        background: red;
+        padding: 20px;
+        border: 10px solid blue;
     }
 
     main{
