--- a/15032017/exo2/css/style.css
+++ b/15032017/exo2/css/style.css
@@ -71,6 +71,7 @@ a{
 
     figure{
         padding: 2rem 0;
+        max-width: 100
     }
 
     img{
@@ -286,7 +287,7 @@ video{
 
         /* Reformatage section Chiffre */
         section:nth-child(7) figure{
-            width: 32%;
+            width: 24%%;
             margin-top: 2rem;
         }
 
