--- a/16032017/exo1/css/style.css
+++ b/16032017/exo1/css/style.css
@@ -267,6 +267,9 @@ div:hover{
  }
 
 span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
     font-size: 1.5rem;
     color: white;
     opacity: 1;
