--- a/16032017/exo1/css/style.css
+++ b/16032017/exo1/css/style.css
@@ -278,3 +278,11 @@ span{
 b{
     display: block;
 }
+
+main section:nth-child(4) article:first-of-type{
+    float: left;
+}
+
+main section:nth-child(4) article{
+    max-width: 33.333%;
+}
