--- a/22032017/Eval blanche/css/style.css
+++ b/22032017/Eval blanche/css/style.css
@@ -179,9 +179,9 @@ figure img{
 @media screen and (min-width:750px){
 
     main{
-        display: block;
         margin: 0 auto;
-            padding: 2rem 0 0 0;
+        padding: 2rem 0 0 0;
+        text-align: initial;
     }
 
     header,footer{
@@ -189,8 +189,10 @@ figure img{
     }
 
     h1{
+        font-size: 4rem;
         text-align: left;
         margin: 2rem 0;
+        line-height: 4rem;
     }
 
     nav li:first-child{
@@ -234,7 +236,6 @@ figure img{
     }
 
     figure {
-        display: inline-block;
         width: 24.5%;
         margin-bottom: .5rem;
     }
