--- a/31032017/exo1/css/style.css
+++ b/31032017/exo1/css/style.css
@@ -7,6 +7,8 @@
     margin: 0;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    -webkit-transition: all .5s linear;
+    transition: all .2s linear;
 }
 
 html{
@@ -28,7 +30,7 @@ h1,h2,h3{
 header{
     color: white;
     background-color: grey;
-    padding: 2rem;
+    padding: 3rem 0 0 0;
     margin-bottom: 2rem;
 }
 
@@ -36,15 +38,53 @@ span{
     font-family: 'Roboto',sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
+    display: block;
+    padding-top: 1rem; 
 }
 
 ul{
-    display: none;
+    width: 100%;
+    padding: 0 2rem;
+    height: 0;
+}
+
+li{
+    display: block;
+    width: 100%;
+    opacity: 0;
+    height: 0;
+    padding: 0;
+    background: lightgrey;
+}
+
+.show{
+    opacity: 1;
+    height: auto;
+    line-height: 4rem;
+}
+
+.showUl{
+    height: 13.4rem;
+    margin-top: 1rem;
+}
+
+.active{
+    color: grey;
+    background: white;
+}
+
+a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    width: 100%;
 }
 
 main{
     padding: 1rem;
 }
+
 footer{
     font-size: 1.3rem;
     color: white;
@@ -77,3 +117,26 @@ h3{
     margin-bottom: 2rem;
 }
 
+nav{
+    position: relative;
+}
+
+i{
+    position: relative;
+    margin: auto;
+    background: grey;
+    padding: 1rem;
+    width: 3.9rem;
+    border: .2rem white solid;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    top: 1.8rem;
+}
+
+.fa{
+    display: block;
+}
+
+li:not(:last-of-type){
+    margin-bottom: 1rem;
+}
