--- a/Wordpress/wp-content/themes/eprojet/style.css
+++ b/Wordpress/wp-content/themes/eprojet/style.css
@@ -62,6 +62,7 @@ header a {
 header a:hover {
     background: #3e88be;
     transition: 1s;
+    text-decoration: none;
 }
 
 header #menu-principal {
