--- a/AJAX/06_Tchat/css/style.css
+++ b/AJAX/06_Tchat/css/style.css
@@ -53,7 +53,7 @@ margin: 0 10px 0 0;
 padding: 2px;
 border: 1px solid #c0c0c0;
 }
-.submit{ float: left; background: #dbdbdb;  }
+#form .submit{ float: left; background: #dbdbdb; width: inherit !important  }
 .clear{ clear: both; }
 .bleu { color: #4e99e6; }
 .rose { color: #e86dbe; }
