--- a/silex-blog/templates/admin/article/edit.html.twig
+++ b/silex-blog/templates/admin/article/edit.html.twig
@@ -3,16 +3,17 @@
 {% block title 'Admin article' %}
     
 {% block content %}
-    <h2>Edition article</h2>
-    
-    <form method="post">
+    <div class="jumbotron">
+        <h2>Edition article</h2>
+    </div>
+    <form method="post" class="col-md-5">
         <div class="form-group">
             <label>Titre</label>
-            <input type="text" name="title" value="{{ article.title }}" class="form-control">
+            <input type="text" name="title" class="form-control" value="{{ article.title }}">
             <label for="short">Résumé</label>
-            <textarea id="short" name="short_content" class="col-md-12">{{ article.short_content }}</textarea>
+            <textarea id="short" name="short_content" class="form-control">{{ article.short_content }}</textarea>
             <label for="article">Article</label>
-            <textarea id="article" name="content" class="col-md-12">{{ article.content }}</textarea>
+            <textarea id="article" name="content" class="form-control">{{ article.content }}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enregistrer</button>
         <a href="{{ path('admin_articles') }}" class="btn btn-default">Annuler</a>
