--- a/silex-blog/templates/admin/article/list.html.twig
+++ b/silex-blog/templates/admin/article/list.html.twig
@@ -3,14 +3,16 @@
 {% block title 'Admin articles' %}
     
 {% block content %}
-    <h2>Articles</h2>
-    <p><a href="{{ path('admin_article_edit') }}">Ajouter une rubrique</a></p>
-    <table class="table">
+    <div class="jumbotron">
+        <h2>Articles</h2>
+    </div>
+    <p><a href="{{ path('admin_article_edit') }}">Ajouter un article</a></p>
+    <table class="table afflist">
         <tr>
             <th>Id</th>
             <th>Titre</th>
             <th>Résumé</th>
-            <th>Contenu</th>
+        <!--    <th>Contenu</th>-->
             <th></th>
         </tr>
         {% for article in articles %}
@@ -18,16 +20,18 @@
                 <td>{{ article.id }}</td>
                 <td>{{ article.title }}</td>
                 <td>{{ article.short_content }}</td>
-                <td>{{ article.content }}</td>
+        <!--        <td>{#{ article.content }#}</td>-->
                 <td>
-                    <a href="{{ path('admin_article_edit',{id: article.id}) }}"
-                       class="btn btn-primary">
-                       <span class="glyphicon glyphicon-pencil"></span>Modifier
-                    </a>
-                    <a href="{{ path('admin_article_delete',{id: article.id}) }}"
-                       class="btn btn-danger">
-                       <span class="glyphicon glyphicon-remove"></span>Supprimer
-                    </a>
+                    <div class="btn-group">
+                        <a href="{{ path('admin_article_edit',{id: article.id}) }}"
+                           class="btn btn-primary btn-sm">
+                           <span class="glyphicon glyphicon-pencil"></span>Modifier
+                        </a>
+                        <a href="{{ path('admin_article_delete',{id: article.id}) }}"
+                           class="btn btn-danger btn-sm">
+                           <span class="glyphicon glyphicon-remove"></span>Supprimer
+                        </a>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
