--- a/silex-blog/templates/admin/category/list.html.twig
+++ b/silex-blog/templates/admin/category/list.html.twig
@@ -3,9 +3,11 @@
 {% block title 'Admin rubriques' %}
     
 {% block content %}
-    <h2>Rubriques</h2>
+    <div class="jumbotron">
+        <h2>Rubriques</h2>
+    </div>
     <p><a href="{{ path('admin_category_edit') }}">Ajouter une rubrique</a></p>
-    <table class="table">
+    <table class="table afflist">
         <tr>
             <th>Id</th>
             <th>Nom</th>
@@ -16,14 +18,16 @@
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
                 <td>
+                    <div class="btn-group">
                     <a href="{{ path('admin_category_edit',{id: category.id}) }}"
-                       class="btn btn-primary">
+                       class="btn btn-primary btn-sm">
                        <span class="glyphicon glyphicon-pencil"></span>Modifier
                     </a>
                     <a href="{{ path('admin_category_delete',{id: category.id}) }}"
-                       class="btn btn-danger">
+                       class="btn btn-danger btn-sm">
                        <span class="glyphicon glyphicon-remove"></span>Supprimer
                     </a>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
