--- a/silex-blog/templates/admin/article/edit.html.twig
+++ b/silex-blog/templates/admin/article/edit.html.twig
@@ -8,12 +8,29 @@
     </div>
     <form method="post" class="col-md-5">
         <div class="form-group">
-            <label>Titre</label>
-            <input type="text" name="title" class="form-control" value="{{ article.title }}">
-            <label for="short">Résumé</label>
-            <textarea id="short" name="short_content" class="form-control">{{ article.short_content }}</textarea>
-            <label for="article">Article</label>
-            <textarea id="article" name="content" class="form-control">{{ article.content }}</textarea>
+            <div class="form-group" >
+                <label>Titre</label>
+                <input type="text" name="title" class="form-control" value="{{ article.title }}">
+            </div>
+            <div class="form-group" >
+                <label>Résumé</label>
+                <textarea id="short" name="short_content" class="form-control">{{ article.short_content }}</textarea>
+            </div>
+            <div class="form-group" >
+                <label>Article</label>
+                <textarea id="article" name="content" class="form-control">{{ article.content }}</textarea>
+            </div>
+            <div class="form-group" >
+                <label class="control-label">Rubrique</label>
+                <select name="category" class="form-control" >
+                    <option value="">Choisissez une rubrique</option>
+                    {% for category in categories %}
+                        <option value="{{ category.id }}"
+                                {% if category.id == article.categoryId %}selected{% endif %}>{{ category.name }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Enregistrer</button>
         <a href="{{ path('admin_articles') }}" class="btn btn-default">Annuler</a>
