--- a/silex-blog/templates/layout.html.twig
+++ b/silex-blog/templates/layout.html.twig
@@ -24,6 +24,7 @@
         <nav class="navbar navbar-default">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('homepage') }}">Blog</a>
+                {{ render(url('categories')) }}
             </div>
         </nav>
             <div class="container">
