--- a/silex-blog/templates/admin/article/list.html.twig
+++ b/silex-blog/templates/admin/article/list.html.twig
@@ -12,6 +12,7 @@
             <th>Id</th>
             <th>Titre</th>
             <th>Résumé</th>
+            <th>Rubrique</th>
         <!--    <th>Contenu</th>-->
             <th></th>
         </tr>
@@ -20,15 +21,16 @@
                 <td>{{ article.id }}</td>
                 <td>{{ article.title }}</td>
                 <td>{{ article.short_content }}</td>
+                <td>{{ article.categoryName }}</td>
         <!--        <td>{#{ article.content }#}</td>-->
                 <td>
                     <div class="btn-group">
                         <a href="{{ path('admin_article_edit',{id: article.id}) }}"
-                           class="btn btn-primary btn-sm">
+                           class="btn btn-primary btn-xs">
                            <span class="glyphicon glyphicon-pencil"></span>Modifier
                         </a>
                         <a href="{{ path('admin_article_delete',{id: article.id}) }}"
-                           class="btn btn-danger btn-sm">
+                           class="btn btn-danger btn-xs">
                            <span class="glyphicon glyphicon-remove"></span>Supprimer
                         </a>
                     </div>
