--- a/silex-blog/templates/admin/category/list.html.twig
+++ b/silex-blog/templates/admin/category/list.html.twig
@@ -20,11 +20,11 @@
                 <td>
                     <div class="btn-group">
                     <a href="{{ path('admin_category_edit',{id: category.id}) }}"
-                       class="btn btn-primary btn-sm">
+                       class="btn btn-primary btn-xs">
                        <span class="glyphicon glyphicon-pencil"></span>Modifier
                     </a>
                     <a href="{{ path('admin_category_delete',{id: category.id}) }}"
-                       class="btn btn-danger btn-sm">
+                       class="btn btn-danger btn-xs">
                        <span class="glyphicon glyphicon-remove"></span>Supprimer
                     </a>
                     </div>
