--- a/silex-blog/templates/categories.html.twig
+++ b/silex-blog/templates/categories.html.twig
@@ -1,16 +1,5 @@
-{% extends "layout.html.twig" %}
-
-{% block content %}
-    <table class="table">
-        <tr>
-            <th>Id</th>
-            <th>Nom</th>
-        </tr>
+<ul class="nav navbar-nav">
         {% for category in categories %}
-            <tr>
-                <td>{{ category.id }}</td>
-                <td>{{ category.name }}</td>
-            </tr>
+            <li><a href="{{ path('category', {id:category.id}) }}">{{ category.name }}</a></li>
         {% endfor %}
-    </table>
-{% endblock %}
+</ul>
