--- a/silex-blog/templates/index.html.twig
+++ b/silex-blog/templates/index.html.twig
@@ -1,5 +1,6 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    Bienvenue !
+    <h2>Accueil</h2>
+    {% include 'article_list.html.twig' %}
 {% endblock %}
