--- a/silex-blog/web/css/main.css
+++ b/silex-blog/web/css/main.css
@@ -10,10 +10,6 @@
     width: 20%;
 }
 
-/*.afflist th:nth-of-type(4){
-    width: 50%;
-}*/
-
 .table .btn {
     width: 10rem;
 }
@@ -22,10 +18,10 @@ textarea {
     resize: none;
 }
 
-textarea:nth-of-type(2) {
+#article {
     max-width: 100%;
-    height: 30rem;
-    max-height: 30rem;
+    height: 25rem;
+    max-height: 25rem;
 }
 
 form.col-md-5 {
