--- a/silex-blog/templates/category.html.twig
+++ b/silex-blog/templates/category.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h2>{{ category.name }}</h2>
-    {% include 'article_list.html.list' %}
+    {% include 'article_list.html.twig' %}
 {% endblock %}
 
