--- a/silex-blog/templates/layout.html.twig
+++ b/silex-blog/templates/layout.html.twig
@@ -8,27 +8,47 @@
         <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container">
-                <a class="navbar-brand">Menu Admin</a>
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="{{ path('admin_categories') }}">Rubriques</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('admin_articles') }}">Articles</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% if user_manager.admin %} {# peut également s'écrire user_manager.isAdmin() #}
+            <nav class="navbar navbar-inverse">
+                <div class="container">
+                    <a class="navbar-brand">Menu Admin</a>
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="{{ path('admin_categories') }}">Rubriques</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('admin_articles') }}">Articles</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        {% endif %}
         <nav class="navbar navbar-default">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('homepage') }}">Blog</a>
                 {{ render(url('categories')) }}
                 <ul class="nav navbar-nav navbar-right" >
+                    {#
+                    Twig va chercher soit
+                        UserManager::getUserConnected()
+                        UserManager::isUserConnected()
+                        UserManager::hasUserConnected()
+                    #}
+                    {% if user_manager.userConnected %}
+                        <li>
+                            <a>{{ user_manager.username }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('logout') }}">Déconnexion</a>
+                        </li>
+                    {% else %}
                     <li>
                         <a href="{{ path('register') }}">Créer un compte</a>
                     </li>
+                    <li>
+                        <a href="{{ path('login') }}">Connexion</a>
+                    </li> 
+                    {% endif %}
                 </ul>
             </div>
         </nav>
@@ -38,7 +58,7 @@
                         {% if label == 'error' %}
                             {% set label = 'danger' %}
                         {% endif %}
-                        <div class="alert alert-{{ label }}">{{ flash }}</div>
+                        <div class="alert alert-{{ label }}">{{ flash|raw }}</div>
                     {% endfor %}
                 {% endfor %}
                 {% block content %}{% endblock %}
